[package]
name = "filter"
version = "0.0.1"
edition = "2021"

[dependencies]
hex = "0.4.3"
csv = "1.3.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.10", features = ["derive"] }
crossbeam =  "0.8.4"
num_cpus = "1.16.0"
sysinfo = "0.33.1"

common = { path = "../common" }
