[package]
name = "scraper"
version = "0.0.1"
edition = "2021"


[dependencies]
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
thirtyfour = "0.35.0"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
clap = { version = "4.4.10", features = ["derive"] }
rand = "0.8"
common = { path = "../common" }